RESOLVED FIXED121964
WeakGCMap should not inherit from HashMap
https://bugs.webkit.org/show_bug.cgi?id=121964
Summary WeakGCMap should not inherit from HashMap
Anders Carlsson
Reported 2013-09-26 10:39:55 PDT
WeakGCMap should not inherit from HashMap
Attachments
Patch (4.81 KB, patch)
2013-09-26 10:43 PDT, Anders Carlsson
ggaren: review+
Anders Carlsson
Comment 1 2013-09-26 10:43:17 PDT
Geoffrey Garen
Comment 2 2013-09-26 10:53:27 PDT
Comment on attachment 212723 [details] Patch r=me
Anders Carlsson
Comment 3 2013-09-26 10:59:06 PDT
Note You need to log in before you can comment on or make changes to this bug.