WeakGCMap should not inherit from HashMap https://bugs.webkit.org/show_bug.cgi?id=121964

Reviewed by Geoffrey Garen.

Add the HashMap as a member variable instead and implement the missing member functions.

* runtime/WeakGCMap.h:

Canonical link: https://commits.webkit.org/139981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156476 268f45cc-cd09-0410-ab3c-d52691b4dbfc